--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+1 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][0]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][0]}}" target="_blank">
-      <div>
+      <div class="result_img">
         <img src="{{output["picture_url0"][0]}}" alt="">
         <img src="{{output["picture_url1"][0]}}" alt="">
         <img src="{{output["picture_url2"][0]}}" alt="">
@@ -47,12 +47,14 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+2 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][1]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][1]}}" target="_blank">
-      <img src="{{output["picture_url0"][1]}}" alt="">
-      <img src="{{output["picture_url1"][1]}}" alt="">
-      <img src="{{output["picture_url2"][1]}}" alt="">
-      <img src="{{output["picture_url3"][1]}}" alt="">
-      <img src="{{output["picture_url4"][1]}}" alt="">
-      <img src="{{output["picture_url5"][1]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][1]}}" alt="">
+        <img src="{{output["picture_url1"][1]}}" alt="">
+        <img src="{{output["picture_url2"][1]}}" alt="">
+        <img src="{{output["picture_url3"][1]}}" alt="">
+        <img src="{{output["picture_url4"][1]}}" alt="">
+        <img src="{{output["picture_url5"][1]}}" alt="">
+      </div>
     </a>
     <p>
       <span class="bold">場所</span>：<span class="bold">{{output["place_list"][1]}}</span>　　　
@@ -77,12 +79,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+3 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][2]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][2]}}" target="_blank">
-      <img src="{{output["picture_url0"][2]}}" alt="">
-      <img src="{{output["picture_url1"][2]}}" alt="">
-      <img src="{{output["picture_url2"][2]}}" alt="">
-      <img src="{{output["picture_url3"][2]}}" alt="">
-      <img src="{{output["picture_url4"][2]}}" alt="">
-      <img src="{{output["picture_url5"][2]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][2]}}" alt="">
+        <img src="{{output["picture_url1"][2]}}" alt="">
+        <img src="{{output["picture_url2"][2]}}" alt="">
+        <img src="{{output["picture_url3"][2]}}" alt="">
+        <img src="{{output["picture_url4"][2]}}" alt="">
+        <img src="{{output["picture_url5"][2]}}" alt="">
+      </div>
+      
     </a>
     <p>
       <span class="bold">場所</span>：<span class="bold">{{output["place_list"][2]}}</span>　　　
@@ -106,12 +111,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+4 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][3]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][3]}}" target="_blank">
-      <img src="{{output["picture_url0"][3]}}" alt="">
-      <img src="{{output["picture_url1"][3]}}" alt="">
-      <img src="{{output["picture_url2"][3]}}" alt="">
-      <img src="{{output["picture_url3"][3]}}" alt="">
-      <img src="{{output["picture_url4"][3]}}" alt="">
-      <img src="{{output["picture_url5"][3]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][3]}}" alt="">
+        <img src="{{output["picture_url1"][3]}}" alt="">
+        <img src="{{output["picture_url2"][3]}}" alt="">
+        <img src="{{output["picture_url3"][3]}}" alt="">
+        <img src="{{output["picture_url4"][3]}}" alt="">
+        <img src="{{output["picture_url5"][3]}}" alt="">
+      </div>
+      
     </a>
     <p>
       <span class="bold">場所</span>：<span class="bold">{{output["place_list"][3]}}</span>　　　
@@ -135,12 +143,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+5 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][4]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][4]}}" target="_blank">
-      <img src="{{output["picture_url0"][4]}}" alt="">
-      <img src="{{output["picture_url1"][4]}}" alt="">
-      <img src="{{output["picture_url2"][4]}}" alt="">
-      <img src="{{output["picture_url3"][4]}}" alt="">
-      <img src="{{output["picture_url4"][4]}}" alt="">
-      <img src="{{output["picture_url5"][4]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][4]}}" alt="">
+        <img src="{{output["picture_url1"][4]}}" alt="">
+        <img src="{{output["picture_url2"][4]}}" alt="">
+        <img src="{{output["picture_url3"][4]}}" alt="">
+        <img src="{{output["picture_url4"][4]}}" alt="">
+        <img src="{{output["picture_url5"][4]}}" alt="">
+      </div>
+      
     </a>
     <p>
       <span class="bold">場所</span>：<span class="bold">{{output["place_list"][4]}}</span>　　　
@@ -164,12 +175,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+6 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][5]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][5]}}" target="_blank">
-      <img src="{{output["picture_url0"][5]}}" alt="">
-      <img src="{{output["picture_url1"][5]}}" alt="">
-      <img src="{{output["picture_url2"][5]}}" alt="">
-      <img src="{{output["picture_url3"][5]}}" alt="">
-      <img src="{{output["picture_url4"][5]}}" alt="">
-      <img src="{{output["picture_url5"][5]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][5]}}" alt="">
+        <img src="{{output["picture_url1"][5]}}" alt="">
+        <img src="{{output["picture_url2"][5]}}" alt="">
+        <img src="{{output["picture_url3"][5]}}" alt="">
+        <img src="{{output["picture_url4"][5]}}" alt="">
+        <img src="{{output["picture_url5"][5]}}" alt="">
+      </div>
+      
     </a>
     <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][5]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][5]}}</span>　　　</p>
   </div>
@@ -191,12 +205,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+7 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][6]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][6]}}" target="_blank">
-      <img src="{{output["picture_url0"][6]}}" alt="">
-      <img src="{{output["picture_url1"][6]}}" alt="">
-      <img src="{{output["picture_url2"][6]}}" alt="">
-      <img src="{{output["picture_url3"][6]}}" alt="">
-      <img src="{{output["picture_url4"][6]}}" alt="">
-      <img src="{{output["picture_url5"][6]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][6]}}" alt="">
+        <img src="{{output["picture_url1"][6]}}" alt="">
+        <img src="{{output["picture_url2"][6]}}" alt="">
+        <img src="{{output["picture_url3"][6]}}" alt="">
+        <img src="{{output["picture_url4"][6]}}" alt="">
+        <img src="{{output["picture_url5"][6]}}" alt="">
+      </div>
+      
     </a>
     <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][6]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][6]}}</span>　　　</p>
   </div>
@@ -218,12 +235,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+8 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][7]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][7]}}" target="_blank">
-      <img src="{{output["picture_url0"][7]}}" alt="">
-      <img src="{{output["picture_url1"][7]}}" alt="">
-      <img src="{{output["picture_url2"][7]}}" alt="">
-      <img src="{{output["picture_url3"][7]}}" alt="">
-      <img src="{{output["picture_url4"][7]}}" alt="">
-      <img src="{{output["picture_url5"][7]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][7]}}" alt="">
+        <img src="{{output["picture_url1"][7]}}" alt="">
+        <img src="{{output["picture_url2"][7]}}" alt="">
+        <img src="{{output["picture_url3"][7]}}" alt="">
+        <img src="{{output["picture_url4"][7]}}" alt="">
+        <img src="{{output["picture_url5"][7]}}" alt="">
+      </div>
+      
     </a>
     <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][7]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][7]}}</span>　　　</p>
   </div>
@@ -245,12 +265,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+9 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][8]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][8]}}" target="_blank">
-      <img src="{{output["picture_url0"][8]}}" alt="">
-      <img src="{{output["picture_url1"][8]}}" alt="">
-      <img src="{{output["picture_url2"][8]}}" alt="">
-      <img src="{{output["picture_url3"][8]}}" alt="">
-      <img src="{{output["picture_url4"][8]}}" alt="">
-      <img src="{{output["picture_url5"][8]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][8]}}" alt="">
+        <img src="{{output["picture_url1"][8]}}" alt="">
+        <img src="{{output["picture_url2"][8]}}" alt="">
+        <img src="{{output["picture_url3"][8]}}" alt="">
+        <img src="{{output["picture_url4"][8]}}" alt="">
+        <img src="{{output["picture_url5"][8]}}" alt="">
+      </div>
+      
     </a>
     <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][8]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][8]}}</span>　　　</p>
   </div>
@@ -272,12 +295,15 @@
       <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+10 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][9]}}</span></h2>
     </div>
     <a class="result_btn" href="{{output["link_url"][9]}}" target="_blank">
-      <img src="{{output["picture_url0"][9]}}" alt="">
-      <img src="{{output["picture_url1"][9]}}" alt="">
-      <img src="{{output["picture_url2"][9]}}" alt="">
-      <img src="{{output["picture_url3"][9]}}" alt="">
-      <img src="{{output["picture_url4"][9]}}" alt="">
-      <img src="{{output["picture_url5"][9]}}" alt="">
+      <div class="result_img">
+        <img src="{{output["picture_url0"][9]}}" alt="">
+        <img src="{{output["picture_url1"][9]}}" alt="">
+        <img src="{{output["picture_url2"][9]}}" alt="">
+        <img src="{{output["picture_url3"][9]}}" alt="">
+        <img src="{{output["picture_url4"][9]}}" alt="">
+        <img src="{{output["picture_url5"][9]}}" alt="">
+      </div>
+      
     </a>
     <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][9]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][9]}}</span>　　　</p>
   </div>
