--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1155,25 +1155,29 @@ select {
 .result_btn{
   display: inline-block;
   overflow: hidden;
-  width: 22.5vw;
+  width: 48vw;
+  max-width: 550px;
   height: auto;
   padding: 0;
 }
-.result_item div:hover {
+.result_img img:hover {
   transform:scale(1.1,1.1);
   transition:1s all;
 }
-.result_btn div {
+.result_img  {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
 }
 .result_btn img{
   margin: 0 auto;
-  display: block;
+  display: inline-block;
   border-right:solid 1px #fff;
   border-bottom:solid 1px #fff;
-  width: 7.5vw;
-  height: 7.5vw;
+  width: 16vw;
+  height: 16vw;
+  max-width: 183.333px;
+  max-height: 183.333px;
   object-fit:cover;
 }
 .result_btn2 {
@@ -1235,16 +1239,16 @@ select {
 
 }
 .result_btn2 a:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .result_btn2 button:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .result_btn3 a:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .result_btn3 button:hover {
-  background-color: rgb(255, 217, 217);
+  background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
 }
 .result_navi {
   display: flex;
@@ -1327,16 +1331,12 @@ select {
     width: 60vw;
     padding: 0;
   }
-  .result_item img:hover {
-    transform:scale(1.1,1.1);
-    transition:1s all;
-  }
   .result_btn img{
     margin: 0 auto;
     display: block;
     border-radius: 2px;
-    width: 60vw;
-    height: 60vw;
+    width: 20vw;
+    height: 20vw;
     object-fit:cover;
   }
   .result_btn2 {
