--- a/templates/result.html
+++ b/templates/result.html
@@ -16,10 +16,11 @@
         <img src="{{output["picture_url5"][0]}}" alt="">
       </div>
     </a>
-    <p>
-      <span class="bold">場所</span>：<span class="bold">{{output["place_list"][0]}}</span>　　　
-      <span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][0]}}</span>　　　
-    </p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][0]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][0]}}</span></li>
+    </ul>
+    
   </div>
   <div class="result_navi">
     {% if output["pickup_count"] != 0 %}
@@ -56,10 +57,10 @@
         <img src="{{output["picture_url5"][1]}}" alt="">
       </div>
     </a>
-    <p>
-      <span class="bold">場所</span>：<span class="bold">{{output["place_list"][1]}}</span>　　　
-      <span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][1]}}</span>　　　
-    </p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][1]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][1]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi" >
     <div class="result_btn3" >
@@ -89,9 +90,10 @@
       </div>
       
     </a>
-    <p>
-      <span class="bold">場所</span>：<span class="bold">{{output["place_list"][2]}}</span>　　　
-      <span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][2]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][2]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][2]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -121,9 +123,10 @@
       </div>
       
     </a>
-    <p>
-      <span class="bold">場所</span>：<span class="bold">{{output["place_list"][3]}}</span>　　　
-      <span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][3]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][3]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][3]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -153,9 +156,10 @@
       </div>
       
     </a>
-    <p>
-      <span class="bold">場所</span>：<span class="bold">{{output["place_list"][4]}}</span>　　　
-      <span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][4]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][4]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][4]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -185,7 +189,10 @@
       </div>
       
     </a>
-    <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][5]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][5]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][5]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][5]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -215,7 +222,10 @@
       </div>
       
     </a>
-    <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][6]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][6]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][6]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][6]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -245,7 +255,10 @@
       </div>
       
     </a>
-    <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][7]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][7]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][7]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][7]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -275,7 +288,10 @@
       </div>
       
     </a>
-    <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][8]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][8]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][8]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][8]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
@@ -305,7 +321,10 @@
       </div>
       
     </a>
-    <p><span class="bold">場所</span>：<span class="bold">{{output["place_list"][9]}}</span>　　　<span class="bold">口コミ予算</span>：<span class="bold">{{output["range_money"][9]}}</span>　　　</p>
+    <ul>
+      <li><span class="bold">場所</span></li><li class="list_contents">：<span class="bold">{{output["place_list"][9]}}</span></li>
+      <li><span class="bold">口コミ予算</span></li><li class="list_contents">：<span class="bold">{{output["range_money"][9]}}</span></li>
+    </ul>
   </div>
   <div class="result_navi">
     <div class="result_btn3" >
