--- a/templates/result.html
+++ b/templates/result.html
@@ -263,7 +263,7 @@
   </div>
   {% endif %}
   {% if output["len"]-output["pickup_count"] >=8 %}
-  <div class="result_item" id="result8">]
+  <div class="result_item" id="result8">
     <a class="result_btn_name" href="{{output["link_url"][7]}}" target="_blank">
       <div class="result_name">
         <h2><span>あなたの気分に</span><span id="count">{{ output["pickup_count"]+8 }}</span>番目に近いのは</span></h2><br><h2><span class="bold">{{output["store_name"][7]}}</span> ▸</h2>
