--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1321,6 +1321,7 @@ select {
     background-color: #fff;
     border-radius: 2px;
     margin: 2.5px 0;
+    padding-bottom: 10px;
   }
   .result_item h2 {
     margin: 10px auto;
@@ -1338,8 +1339,10 @@ select {
     max-width: 600px;
     line-height:normal;
     margin: 20px auto;
-    border-bottom: black 3px  solid;
-    border-top: black 3px  solid;
+    border: 0;
+    background: linear-gradient(90deg, rgb(255, 231, 217), rgb(255, 196, 196));
+    border-radius: 100vh;
+    padding: 5px 0;
   }
   .result_btn_name h2 {
     font-weight: normal;
